# APEngine

./: .gitignore  CMakeLists.txt  OGLengine.sln  README.md  changelog.md  typedef.h
OGLengine/: OGLengine.vcxproj  OGLengine.vcxproj.filters  changeLOG.md  changeLOG.txt  imgui.ini
OGLengine/Game/: main.cpp
demo/: jumpsDemo.cpp  jumpsDemo.h
include/: Animation.h  AssetManager.h  Background.h  BackgroundTile.h  Cactus.h  Camera.h  Constant.cpp  Constant.h  DebugShape.h  Engine.h  FrustumOpitmizer.h  Game.h  HUD.h  Hitbox.h  IGui.h  IHitbox.h  Image.cpp  Image.h  InputSystem.h  LevelHitboxes.h  LevelManager.h  Mesh.h  Model.h  MovingObject.h  Object3D.h  Parser.h  PostProcessor.cpp  PostProcessor.h  Rock.h  Scene.h  Shader.h  Text.h  Texture2D.cpp  Texture2D.h  Transform.h  Wall.h  Walls.h
include/Animations/: Animation.cpp  Animation.h  AnimationModel.h  Animator.h  Bone.cpp  Bone.h  GLConverter.cpp
include/Animations2/: Animation.cpp  Animation.h  AnimationShader.vert  Animator.cpp  Animator.h  AssimpGLMHelpers.h  Bone.cpp  Bone.h
include/Audio/: AudioListener.h  AudioLoader.h  AudioManager.h  AudioSource.h
include/Background/: Background.h  BackgroundTile.h  Cactus.h  Rock.h
include/Objects/: Ant.h  Battery.h  Box.h  Button.h  Cable.h  DebugShape.h  Grabber.h  Hitbox.h  Level.h  LightBulb.h  Mesh.h  Model.h  MovingObject.h  Object3D.h  Platform.h  PlayerGrabber.h  PlayerJumper.h  SimpleHitbox.h  Transform.h  Walls.h  WinArea.h
include/User/: Animation.h  Constant.h  (+7 more)
src/: Animation.cpp  AssetManager.cpp  Background.cpp  BackgroundTile.cpp  CMakeLists.txt  Cactus.cpp  Camera.cpp  Constant.cpp  DebugShape.cpp  Engine.cpp  FrustumOptimizer.cpp  Game.cpp  Hitbox.cpp  IGui.cpp  IHitbox.cpp  Image.cpp  InputSystem.cpp  LevelManager.cpp  Mesh.cpp  MovingObject.cpp  Object3D.cpp  Parser.cpp  Renderer.cpp  Rock.cpp  Shader.cpp  Sierpinski.cpp  Text.cpp  Wall.cpp  Walls.cpp  main.cpp
src/Animations/: AnimationModel.cpp
src/Audio/: AudioListener.cpp  AudioLoader.cpp  AudioManager.cpp  AudioSource.cpp
src/Background/: Background.cpp  BackgroundTile.cpp  Cactus.cpp  Rock.cpp
src/Objects/: Ant.cpp  Battery.cpp  Box.cpp  Button.cpp  Cable.cpp  DebugShape.cpp  Grabber.cpp  Hitbox.cpp  Level.cpp  LightBulb.cpp  Model.cpp  MovingObject.cpp  Object3D.cpp  Platform.cpp  PlayerGrabber.cpp  PlayerJumper.cpp  SimpleHitbox.cpp  Walls.cpp  WinArea.cpp
src/User/: Animation.cpp  Constant.cpp  HUD.cpp  InputSystem.cpp  SpriteRenderer.cpp
src/imgui_impl/: imgui_impl_opengl3.cpp
src/lights/: AmbientLight.cpp  DirectionalLight.cpp  PointLight.cpp  Shadows.cpp  SpotLight.cpp
(+217 files in other folders)
